feat: tests and adjustment to statistics and request rules